# turista

./: .env.example  .env.production.example  .gitignore  ALLOWANCES_COMPLETE.md  ALLOWANCES_NEXT_STEPS.md  DEPLOYMENT.md  PRD.md  README.md  TESTING_MARKETPLACE.md  index.html  keycomponents.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: scout.yml
contracts/: Cargo.toml  scout-audit.toml
contracts/checkin_nft/: Cargo.toml
contracts/checkin_nft/src/: error.rs  lib.rs
contracts/checkin_nft/test_snapshots/test/: test_cannot_checkin_twice.1.json  test_get_user_nfts.1.json  test_initialize.1.json  test_mint.1.json  test_transfer_fails.1.json
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: error.rs  lib.rs
contracts/marketplace/test_snapshots/test/: test_initialize.1.json  test_invalid_amounts.1.json  test_purchase_with_discount.1.json  test_purchase_with_xlm.1.json
contracts/tur_token/: Cargo.toml
contracts/tur_token/src/: error.rs  lib.rs
contracts/tur_token/test_snapshots/test/: test_burn.1.json  test_initialize.1.json  test_transfer.1.json
scripts/: initialize-contracts.js
src/: App.tsx  index.css  vite-env.d.ts
src/components/: Header.tsx  Layout.tsx  PlaceCard.tsx  ProductCard.tsx
src/constants/: config.ts  places.ts  products.ts
src/data/: places.ts  products.ts
src/hooks/: useCheckIn.ts  useGeolocation.ts  useWallet.ts
src/pages/: Collection.tsx  Home.tsx  MapView.tsx  Marketplace.tsx  Profile.tsx
src/providers/: WalletProvider.tsx
src/services/: balance.service.ts  checkin.service.ts  (+2 more)
(+2 files in other folders)
